--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -24,7 +24,17 @@
     "fileExists": "Ya existe un archivo con el nombre \"{{filename}}\". Por favor, cambie el nombre de su archivo o elija otro.",
     "invalidFileType": "Por favor, seleccione un archivo .docx",
     "uploadSuccess": "¡Plantilla \"{{filename}}\" cargada exitosamente!",
-    "uploadFailed": "Error al cargar. Por favor, inténtelo de nuevo."
+    "uploadFailed": "Error al cargar. Por favor, inténtelo de nuevo.",
+    "uploadModeTitle": "¿Cómo desea usar este archivo?",
+    "saveOnly": "Solo guardar",
+    "saveOnlyDesc": "Guardar plantilla sin procesar",
+    "saveAndProcess": "Guardar y procesar",
+    "saveAndProcessDesc": "Guardar plantilla permanentemente y procesarla",
+    "oneTimeProcess": "Procesamiento único",
+    "oneTimeProcessDesc": "Procesar una vez sin guardar en la base de datos",
+    "cancelUpload": "Cancelar",
+    "selectFolder": "Select folder",
+    "rootFolder": "Root (All Templates)"
   },
   "fileList": {
     "noTemplates": "Aún no hay plantillas",
@@ -36,7 +46,12 @@
     "deleteConfirmTitle": "Eliminar plantilla",
     "deleteConfirmMessage": "¿Está seguro de que desea eliminar \"{{filename}}\"? Esta acción no se puede deshacer.",
     "deleteSuccess": "Plantilla \"{{filename}}\" eliminada exitosamente",
-    "deleteFailed": "Error al eliminar el archivo. Por favor, inténtelo de nuevo."
+    "deleteFailed": "Error al eliminar el archivo. Por favor, inténtelo de nuevo.",
+    "noTemplatesInFolder": "No templates in this folder",
+    "moveToFolder": "Upload or move templates here",
+    "moveTemplate": "Move to folder",
+    "moveSuccess": "Template moved successfully",
+    "moveFailed": "Failed to move template"
   },
   "templateProcessor": {
     "title": "Procesar plantilla",
@@ -70,5 +85,45 @@
     "fr": "Français",
     "zh": "中文",
     "ja": "日本語"
+  },
+  "folders": {
+    "allTemplates": "All Templates",
+    "newFolder": "New Folder",
+    "noFolders": "No folders yet",
+    "createFirst": "Create your first folder to organize templates",
+    "createFolder": "Create Folder",
+    "createSubfolder": "Create Subfolder",
+    "renameFolder": "Rename Folder",
+    "deleteFolder": "Delete Folder",
+    "folderName": "Folder name",
+    "parentFolder": "Parent folder",
+    "enterFolderName": "Enter folder name...",
+    "folderCreated": "Folder \"{{name}}\" created successfully",
+    "folderRenamed": "Folder renamed to \"{{name}}\"",
+    "folderDeleted": "Folder \"{{name}}\" deleted",
+    "deleteFolderConfirm": "Delete \"{{name}}\" and all its contents?",
+    "deleteFolderDetail": "This will permanently delete {{count}} template(s).",
+    "cannotUndo": "This action cannot be undone.",
+    "maxDepthReached": "Maximum folder depth reached (2 levels)",
+    "invalidFolderName": "Invalid folder name",
+    "folderNameTooLong": "Folder name too long (max 50 characters)",
+    "folderNameEmpty": "Folder name cannot be empty",
+    "folderExists": "A folder with this name already exists",
+    "noSpecialChars": "No special characters allowed: /\\:*?\"<>|",
+    "actions": "Folder actions",
+    "uploadToFolder": "Subir a la carpeta",
+    "creating": "Creating...",
+    "renaming": "Renaming...",
+    "loadFailed": "Failed to load folders",
+    "createFailed": "Failed to create folder",
+    "renameFailed": "Failed to rename folder",
+    "deleteFailed": "Failed to delete folder"
+  },
+  "templateMove": {
+    "title": "Move Template",
+    "currentLocation": "Current location",
+    "moveTo": "Move to",
+    "moveButton": "Move Template",
+    "moving": "Moving..."
   }
 }
