--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -24,7 +24,17 @@
     "fileExists": "A \"{{filename}}\" nevű fájl már létezik. Kérjük, nevezze át a fájlt vagy válasszon másikat.",
     "invalidFileType": "Kérjük, válasszon .docx fájlt",
     "uploadSuccess": "A \"{{filename}}\" sablon sikeresen feltöltve!",
-    "uploadFailed": "A feltöltés sikertelen. Kérjük, próbálja újra."
+    "uploadFailed": "A feltöltés sikertelen. Kérjük, próbálja újra.",
+    "uploadModeTitle": "Hogyan szeretné használni ezt a fájlt?",
+    "saveOnly": "Csak mentés",
+    "saveOnlyDesc": "Sablon mentése feldolgozás nélkül",
+    "saveAndProcess": "Mentés és feldolgozás",
+    "saveAndProcessDesc": "Sablon végleges mentése és feldolgozása",
+    "oneTimeProcess": "Egyszeri feldolgozás",
+    "oneTimeProcessDesc": "Egyszeri feldolgozás adatbázisba mentés nélkül",
+    "cancelUpload": "Mégse",
+    "selectFolder": "Select folder",
+    "rootFolder": "Root (All Templates)"
   },
   "fileList": {
     "noTemplates": "Még nincsenek sablonok",
@@ -36,7 +46,12 @@
     "deleteConfirmTitle": "Sablon törlése",
     "deleteConfirmMessage": "Biztosan törölni szeretné a \"{{filename}}\" fájlt? Ez a művelet nem vonható vissza.",
     "deleteSuccess": "A \"{{filename}}\" sablon sikeresen törölve",
-    "deleteFailed": "A fájl törlése sikertelen. Kérjük, próbálja újra."
+    "deleteFailed": "A fájl törlése sikertelen. Kérjük, próbálja újra.",
+    "noTemplatesInFolder": "No templates in this folder",
+    "moveToFolder": "Upload or move templates here",
+    "moveTemplate": "Move to folder",
+    "moveSuccess": "Template moved successfully",
+    "moveFailed": "Failed to move template"
   },
   "templateProcessor": {
     "title": "Sablon feldolgozása",
@@ -70,5 +85,45 @@
     "fr": "Français",
     "zh": "中文",
     "ja": "日本語"
+  },
+  "folders": {
+    "allTemplates": "All Templates",
+    "newFolder": "New Folder",
+    "noFolders": "No folders yet",
+    "createFirst": "Create your first folder to organize templates",
+    "createFolder": "Create Folder",
+    "createSubfolder": "Create Subfolder",
+    "renameFolder": "Rename Folder",
+    "deleteFolder": "Delete Folder",
+    "folderName": "Folder name",
+    "parentFolder": "Parent folder",
+    "enterFolderName": "Enter folder name...",
+    "folderCreated": "Folder \"{{name}}\" created successfully",
+    "folderRenamed": "Folder renamed to \"{{name}}\"",
+    "folderDeleted": "Folder \"{{name}}\" deleted",
+    "deleteFolderConfirm": "Delete \"{{name}}\" and all its contents?",
+    "deleteFolderDetail": "This will permanently delete {{count}} template(s).",
+    "cannotUndo": "This action cannot be undone.",
+    "maxDepthReached": "Maximum folder depth reached (2 levels)",
+    "invalidFolderName": "Invalid folder name",
+    "folderNameTooLong": "Folder name too long (max 50 characters)",
+    "folderNameEmpty": "Folder name cannot be empty",
+    "folderExists": "A folder with this name already exists",
+    "noSpecialChars": "No special characters allowed: /\\:*?\"<>|",
+    "actions": "Folder actions",
+    "uploadToFolder": "Feltöltés mappába",
+    "creating": "Creating...",
+    "renaming": "Renaming...",
+    "loadFailed": "Failed to load folders",
+    "createFailed": "Failed to create folder",
+    "renameFailed": "Failed to rename folder",
+    "deleteFailed": "Failed to delete folder"
+  },
+  "templateMove": {
+    "title": "Move Template",
+    "currentLocation": "Current location",
+    "moveTo": "Move to",
+    "moveButton": "Move Template",
+    "moving": "Moving..."
   }
 }
