--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -21,28 +21,37 @@
     "description": "Vyberte .docx súbor s premennými na nahratie",
     "chooseFile": "Vybrať súbor",
     "uploading": "Nahrávam...",
-    "fileExists": "Súbor s názvom \"{{filename}}\" už existuje. Prosím premenujte váš súbor alebo vyberte iný.",
+    "fileExists": "Súbor s názvom \"{{filename}}\" už existuje v tomto priečinku. Prosím premenujte váš súbor alebo vyberte iný.",
     "invalidFileType": "Prosím vyberte .docx súbor",
     "uploadSuccess": "Šablóna \"{{filename}}\" bola úspešne nahraná!",
     "uploadFailed": "Nahrávanie zlyhalo. Prosím skúste znova.",
     "uploadModeTitle": "Ako chcete tento súbor použiť?",
+    "saveOnly": "Iba uložiť",
+    "saveOnlyDesc": "Uložiť šablónu bez spracovania",
     "saveAndProcess": "Uložiť a spracovať",
     "saveAndProcessDesc": "Uložiť šablónu natrvalo a spracovať ju",
     "oneTimeProcess": "Jednorazové spracovanie",
     "oneTimeProcessDesc": "Spracovať raz bez uloženia do databázy",
-    "cancelUpload": "Zrušiť"
+    "cancelUpload": "Zrušiť",
+    "selectFolder": "Vybrať priečinok",
+    "rootFolder": "Koreň (Všetky šablóny)"
   },
   "fileList": {
     "noTemplates": "Zatiaľ žiadne šablóny",
     "getStarted": "Nahrajte svoju prvú Word šablónu",
+    "noTemplatesInFolder": "Žiadne šablóny v tomto priečinku",
+    "moveToFolder": "Nahrajte alebo presuňte šablóny sem",
     "processTemplate": "Spracovať šablónu",
     "size": "Veľkosť",
     "uploaded": "Nahrané",
     "deleteTemplate": "Zmazať šablónu",
+    "moveTemplate": "Presunúť do priečinka",
     "deleteConfirmTitle": "Zmazať šablónu",
     "deleteConfirmMessage": "Naozaj chcete zmazať \"{{filename}}\"? Túto akciu nie je možné vrátiť späť.",
     "deleteSuccess": "Šablóna \"{{filename}}\" bola úspešne zmazaná",
-    "deleteFailed": "Nepodarilo sa zmazať súbor. Prosím skúste znova."
+    "deleteFailed": "Nepodarilo sa zmazať súbor. Prosím skúste znova.",
+    "moveSuccess": "Šablóna bola úspešne presunutá",
+    "moveFailed": "Nepodarilo sa presunúť šablónu"
   },
   "templateProcessor": {
     "title": "Spracovať šablónu",
@@ -78,5 +87,45 @@
     "fr": "Français",
     "zh": "中文",
     "ja": "日本語"
+  },
+  "folders": {
+    "allTemplates": "Všetky šablóny",
+    "newFolder": "Nový priečinok",
+    "noFolders": "Zatiaľ žiadne priečinky",
+    "createFirst": "Vytvorte svoj prvý priečinok na organizáciu šablón",
+    "createFolder": "Vytvoriť priečinok",
+    "createSubfolder": "Vytvoriť podpriečinok",
+    "renameFolder": "Premenovať priečinok",
+    "deleteFolder": "Zmazať priečinok",
+    "folderName": "Názov priečinka",
+    "parentFolder": "Nadradený priečinok",
+    "enterFolderName": "Zadajte názov priečinka...",
+    "folderCreated": "Priečinok \"{{name}}\" bol úspešne vytvorený",
+    "folderRenamed": "Priečinok premenovaný na \"{{name}}\"",
+    "folderDeleted": "Priečinok \"{{name}}\" bol zmazaný",
+    "deleteFolderConfirm": "Zmazať \"{{name}}\" a celý jeho obsah?",
+    "deleteFolderDetail": "Toto natrvalo zmaže {{count}} šablón.",
+    "cannotUndo": "Túto akciu nie je možné vrátiť späť.",
+    "maxDepthReached": "Dosiahnutá maximálna hĺbka priečinkov (2 úrovne)",
+    "invalidFolderName": "Neplatný názov priečinka",
+    "folderNameTooLong": "Názov priečinka je príliš dlhý (max 50 znakov)",
+    "folderNameEmpty": "Názov priečinka nemôže byť prázdny",
+    "folderExists": "Priečinok s týmto názvom už existuje",
+    "noSpecialChars": "Nepovolené špeciálne znaky: /\\:*?\"<>|",
+    "actions": "Akcie priečinka",
+    "uploadToFolder": "Nahrať do priečinka",
+    "creating": "Vytváram...",
+    "renaming": "Premenovávam...",
+    "loadFailed": "Nepodarilo sa načítať priečinky",
+    "createFailed": "Nepodarilo sa vytvoriť priečinok",
+    "renameFailed": "Nepodarilo sa premenovať priečinok",
+    "deleteFailed": "Nepodarilo sa zmazať priečinok"
+  },
+  "templateMove": {
+    "title": "Presunúť šablónu",
+    "currentLocation": "Aktuálne umiestnenie",
+    "moveTo": "Presunúť do",
+    "moveButton": "Presunúť šablónu",
+    "moving": "Presúvam..."
   }
 }
