--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -21,28 +21,37 @@
     "description": "Select a .docx file with placeholders to upload",
     "chooseFile": "Choose File",
     "uploading": "Uploading...",
-    "fileExists": "A file with the name \"{{filename}}\" already exists. Please rename your file or choose a different one.",
+    "fileExists": "A file with the name \"{{filename}}\" already exists in this folder. Please rename your file or choose a different one.",
     "invalidFileType": "Please select a .docx file",
     "uploadSuccess": "Template \"{{filename}}\" uploaded successfully!",
     "uploadFailed": "Upload failed. Please try again.",
     "uploadModeTitle": "How would you like to use this file?",
+    "saveOnly": "Save Only",
+    "saveOnlyDesc": "Save template without processing",
     "saveAndProcess": "Save & Process",
     "saveAndProcessDesc": "Save template permanently and process it",
     "oneTimeProcess": "One-time Process",
     "oneTimeProcessDesc": "Process once without saving to database",
-    "cancelUpload": "Cancel"
+    "cancelUpload": "Cancel",
+    "selectFolder": "Select folder",
+    "rootFolder": "Root (All Templates)"
   },
   "fileList": {
     "noTemplates": "No templates yet",
     "getStarted": "Upload your first Word template to get started",
+    "noTemplatesInFolder": "No templates in this folder",
+    "moveToFolder": "Upload or move templates here",
     "processTemplate": "Process Template",
     "size": "Size",
     "uploaded": "Uploaded",
     "deleteTemplate": "Delete template",
+    "moveTemplate": "Move to folder",
     "deleteConfirmTitle": "Delete Template",
     "deleteConfirmMessage": "Are you sure you want to delete \"{{filename}}\"? This action cannot be undone.",
     "deleteSuccess": "Template \"{{filename}}\" deleted successfully",
-    "deleteFailed": "Failed to delete file. Please try again."
+    "deleteFailed": "Failed to delete file. Please try again.",
+    "moveSuccess": "Template moved successfully",
+    "moveFailed": "Failed to move template"
   },
   "templateProcessor": {
     "title": "Process Template",
@@ -76,5 +85,45 @@
     "fr": "Français",
     "zh": "中文",
     "ja": "日本語"
+  },
+  "folders": {
+    "allTemplates": "All Templates",
+    "newFolder": "New Folder",
+    "noFolders": "No folders yet",
+    "createFirst": "Create your first folder to organize templates",
+    "createFolder": "Create Folder",
+    "createSubfolder": "Create Subfolder",
+    "renameFolder": "Rename Folder",
+    "deleteFolder": "Delete Folder",
+    "folderName": "Folder name",
+    "parentFolder": "Parent folder",
+    "enterFolderName": "Enter folder name...",
+    "folderCreated": "Folder \"{{name}}\" created successfully",
+    "folderRenamed": "Folder renamed to \"{{name}}\"",
+    "folderDeleted": "Folder \"{{name}}\" deleted",
+    "deleteFolderConfirm": "Delete \"{{name}}\" and all its contents?",
+    "deleteFolderDetail": "This will permanently delete {{count}} template(s).",
+    "cannotUndo": "This action cannot be undone.",
+    "maxDepthReached": "Maximum folder depth reached (2 levels)",
+    "invalidFolderName": "Invalid folder name",
+    "folderNameTooLong": "Folder name too long (max 50 characters)",
+    "folderNameEmpty": "Folder name cannot be empty",
+    "folderExists": "A folder with this name already exists",
+    "noSpecialChars": "No special characters allowed: /\\:*?\"<>|",
+    "actions": "Folder actions",
+    "uploadToFolder": "Upload to Folder",
+    "creating": "Creating...",
+    "renaming": "Renaming...",
+    "loadFailed": "Failed to load folders",
+    "createFailed": "Failed to create folder",
+    "renameFailed": "Failed to rename folder",
+    "deleteFailed": "Failed to delete folder"
+  },
+  "templateMove": {
+    "title": "Move Template",
+    "currentLocation": "Current location",
+    "moveTo": "Move to",
+    "moveButton": "Move Template",
+    "moving": "Moving..."
   }
 }
