--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -24,7 +24,17 @@
     "fileExists": "Un fichier avec le nom \"{{filename}}\" existe déjà. Veuillez renommer votre fichier ou en choisir un autre.",
     "invalidFileType": "Veuillez sélectionner un fichier .docx",
     "uploadSuccess": "Modèle \"{{filename}}\" téléchargé avec succès !",
-    "uploadFailed": "Échec du téléchargement. Veuillez réessayer."
+    "uploadFailed": "Échec du téléchargement. Veuillez réessayer.",
+    "uploadModeTitle": "Comment souhaitez-vous utiliser ce fichier ?",
+    "saveOnly": "Sauvegarder uniquement",
+    "saveOnlyDesc": "Sauvegarder le modèle sans traiter",
+    "saveAndProcess": "Sauvegarder et traiter",
+    "saveAndProcessDesc": "Sauvegarder le modèle de façon permanente et le traiter",
+    "oneTimeProcess": "Traitement unique",
+    "oneTimeProcessDesc": "Traiter une fois sans sauvegarder dans la base de données",
+    "cancelUpload": "Annuler",
+    "selectFolder": "Select folder",
+    "rootFolder": "Root (All Templates)"
   },
   "fileList": {
     "noTemplates": "Pas encore de modèles",
@@ -36,7 +46,12 @@
     "deleteConfirmTitle": "Supprimer le modèle",
     "deleteConfirmMessage": "Êtes-vous sûr de vouloir supprimer \"{{filename}}\" ? Cette action ne peut pas être annulée.",
     "deleteSuccess": "Modèle \"{{filename}}\" supprimé avec succès",
-    "deleteFailed": "Échec de la suppression du fichier. Veuillez réessayer."
+    "deleteFailed": "Échec de la suppression du fichier. Veuillez réessayer.",
+    "noTemplatesInFolder": "No templates in this folder",
+    "moveToFolder": "Upload or move templates here",
+    "moveTemplate": "Move to folder",
+    "moveSuccess": "Template moved successfully",
+    "moveFailed": "Failed to move template"
   },
   "templateProcessor": {
     "title": "Traiter le modèle",
@@ -70,5 +85,45 @@
     "fr": "Français",
     "zh": "中文",
     "ja": "日本語"
+  },
+  "folders": {
+    "allTemplates": "All Templates",
+    "newFolder": "New Folder",
+    "noFolders": "No folders yet",
+    "createFirst": "Create your first folder to organize templates",
+    "createFolder": "Create Folder",
+    "createSubfolder": "Create Subfolder",
+    "renameFolder": "Rename Folder",
+    "deleteFolder": "Delete Folder",
+    "folderName": "Folder name",
+    "parentFolder": "Parent folder",
+    "enterFolderName": "Enter folder name...",
+    "folderCreated": "Folder \"{{name}}\" created successfully",
+    "folderRenamed": "Folder renamed to \"{{name}}\"",
+    "folderDeleted": "Folder \"{{name}}\" deleted",
+    "deleteFolderConfirm": "Delete \"{{name}}\" and all its contents?",
+    "deleteFolderDetail": "This will permanently delete {{count}} template(s).",
+    "cannotUndo": "This action cannot be undone.",
+    "maxDepthReached": "Maximum folder depth reached (2 levels)",
+    "invalidFolderName": "Invalid folder name",
+    "folderNameTooLong": "Folder name too long (max 50 characters)",
+    "folderNameEmpty": "Folder name cannot be empty",
+    "folderExists": "A folder with this name already exists",
+    "noSpecialChars": "No special characters allowed: /\\:*?\"<>|",
+    "actions": "Folder actions",
+    "uploadToFolder": "Télécharger dans le dossier",
+    "creating": "Creating...",
+    "renaming": "Renaming...",
+    "loadFailed": "Failed to load folders",
+    "createFailed": "Failed to create folder",
+    "renameFailed": "Failed to rename folder",
+    "deleteFailed": "Failed to delete folder"
+  },
+  "templateMove": {
+    "title": "Move Template",
+    "currentLocation": "Current location",
+    "moveTo": "Move to",
+    "moveButton": "Move Template",
+    "moving": "Moving..."
   }
 }
