fixed choosing files and folders

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -23,7 +23,10 @@
     "uploading": "Uploading...",
     "fileExists": "A file with the name \"{{filename}}\" already exists in this folder. Please rename your file or choose a different one.",
     "invalidFileType": "Please select a .docx file",
+    "someFilesInvalid": "Some files were skipped (only .docx files are allowed)",
     "uploadSuccess": "Template \"{{filename}}\" uploaded successfully!",
+    "uploadMultipleSuccess": "{{count}} templates uploaded successfully!",
+    "uploadMultipleFailed": "{{count}} file(s) failed to upload",
     "uploadFailed": "Upload failed. Please try again.",
     "uploadModeTitle": "How would you like to use this file?",
     "saveOnly": "Save Only",
@@ -32,6 +35,8 @@
     "saveAndProcessDesc": "Save template permanently and process it",
     "oneTimeProcess": "One-time Process",
     "oneTimeProcessDesc": "Process once without saving to database",
+    "singleFileOnly": "Only available for single file",
+    "selectedFiles": "Selected file(s): {{count}}",
     "cancelUpload": "Cancel",
     "selectFolder": "Select folder",
     "rootFolder": "Root (All Templates)"
@@ -91,6 +96,8 @@
     "newFolder": "New Folder",
     "noFolders": "No folders yet",
     "createFirst": "Create your first folder to organize templates",
+    "expand": "Expand folder",
+    "collapse": "Collapse folder",
     "createFolder": "Create Folder",
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
