--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -23,7 +23,10 @@
     "uploading": "Nahrávam...",
     "fileExists": "Súbor s názvom \"{{filename}}\" už existuje v tomto priečinku. Prosím premenujte váš súbor alebo vyberte iný.",
     "invalidFileType": "Prosím vyberte .docx súbor",
+    "someFilesInvalid": "Niektoré súbory boli preskočené (povolené sú iba .docx súbory)",
     "uploadSuccess": "Šablóna \"{{filename}}\" bola úspešne nahraná!",
+    "uploadMultipleSuccess": "{{count}} šablón bolo úspešne nahraných!",
+    "uploadMultipleFailed": "{{count}} súborov sa nepodarilo nahrať",
     "uploadFailed": "Nahrávanie zlyhalo. Prosím skúste znova.",
     "uploadModeTitle": "Ako chcete tento súbor použiť?",
     "saveOnly": "Iba uložiť",
@@ -32,6 +35,8 @@
     "saveAndProcessDesc": "Uložiť šablónu natrvalo a spracovať ju",
     "oneTimeProcess": "Jednorazové spracovanie",
     "oneTimeProcessDesc": "Spracovať raz bez uloženia do databázy",
+    "singleFileOnly": "Dostupné iba pre jeden súbor",
+    "selectedFiles": "Vybraný súbor (súborov): {{count}}",
     "cancelUpload": "Zrušiť",
     "selectFolder": "Vybrať priečinok",
     "rootFolder": "Koreň (Všetky šablóny)"
@@ -93,6 +98,8 @@
     "newFolder": "Nový priečinok",
     "noFolders": "Zatiaľ žiadne priečinky",
     "createFirst": "Vytvorte svoj prvý priečinok na organizáciu šablón",
+    "expand": "Rozbaliť priečinok",
+    "collapse": "Zbaliť priečinok",
     "createFolder": "Vytvoriť priečinok",
     "createSubfolder": "Vytvoriť podpriečinok",
     "renameFolder": "Premenovať priečinok",
